# word_forge

./: code_perfection_prompt.md  code_polishing_prompt.md  code_review.md  lexical_proto.py  living_lexicon_discussion.md  pyproject.toml  self.md  temp_conv_demo_db.sqlite-shm  temp_conv_demo_db.sqlite-wal  temp_interactive_conv_demo_db.sqlite-shm  temp_interactive_conv_demo_db.sqlite-wal  test_database.sqlite  upgrade_plan.md  word_forge.code-workspace  word_forge.sqlite  word_forge_demo.sqlite
data/: chroma.sqlite3  chroma.sqlite3-shm  chroma.sqlite3-wal  graph_visualization_2d.html  graph_visualization_3d.html  lexical_graph.gexf  word_forge.sqlite-shm  word_forge.sqlite-wal
data/demo_outputs/: graph_visualization_2d.html  lexical_graph_demo.gexf  subgraph_algorithm_depth2.gexf
data/exports/: subgraph_algorithm_d2.gexf
data/visualizations/: lexical_graph.html
db_worker_demo/: test_database.sqlite
db_worker_demo/backups/: test_database.sqlite_20250408_222949.backup  test_database.sqlite_20250409_122920.backup  test_database.sqlite_20250409_192042.backup
docs/migration/: emotion_config_migration.md
lib/bindings/: utils.js
src/old/: graph_manager.py  word_forge_cli.py  worker_thread.py
src/old/configs/: config_essentials.py  config_exceptions.py  config_protocols.py  conversation_config.py  emotion_config.py  graph_config.py  vectorizer_config.py
src/word_forge/: config.py  exceptions.py  relationships.py
src/word_forge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/word_forge/cli/: word_forge_cli.py
src/word_forge/demos/: config_demo.py  (+13 more)
vector_demo/: demo.sqlite
(+56 files in other folders)
